--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dev_dependencies:
   fluttertoast: ^8.0.8
   badges: ^2.0.1
   font_awesome_flutter: ^9.1.0
+  flutter_svg: ^0.22.0
+  fluid_bottom_nav_bar: ^1.3.0
   
 
   
@@ -65,6 +67,8 @@ flutter:
     - assets/images/homework16/
     - assets/images/homework17/
     - assets/images/homework18/
+    - assets/icons/homework19/
+    - assets/images/coffee_shop/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
