--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,18 +33,22 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   palette_generator: ^0.3.1
+  #  glass effect berishga yordam beradi
   glassmorphism_ui: ^0.2.0
   awesome_dialog: ^2.1.1
   fluttertoast: ^8.0.8
   badges: ^2.0.1
   font_awesome_flutter: ^9.1.0
-  flutter_svg: ^0.22.0
   fluid_bottom_nav_bar: ^1.3.0
   card_swiper: ^1.0.2
   delayed_display: ^2.0.0
   flutter_staggered_grid_view: ^0.4.0
+  #  Internet bilan ishlashga yordam beradi 
   http: ^0.13.3
+  #  bayroqlar blan ishlashga yordam beradi
   flag: ^5.0.1
+  # svg formatdagi fayllar bilan ishlashga yordam beradi
+  flutter_svg: ^0.22.0
 
   
 
